<resources>
    <string name="app_name">Nov17-Evi7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edt_1">Ingrese un número entero</string>
    <string name="v">tv_1</string>
    <string name="tx_1">Valor entero almacenado</string>
    <string name="edt_2">Ingrese un texto</string>
    <string name="tv_2">Texto almacenado</string>
    <string name="tv_3">Valor decimal almacenado</string>
    <string name="edt_3">Ingrese un número decimal</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
</resources>